--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-PORT = 5000
+PORT = 3000
 MONGO_DB_URL=mongodb+srv://vishnu-app:vishnu-app@cluster0.vttigzb.mongodb.net/chat-app-db?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET_KEY=jdhfbihbdkwe
+NODE_ENV=development
